control-android: cleanup logging